Combo WIP  - When no items match filter, display error message as does chosen  - Option to enable/disable filter box  - Show selected item when drop down appears  - Have a different hover colour to selected colour?  - Basic keyboard support (up/down, home/end, esc, enter, tab)  - When the drop-down is shown, set focus to input box  - Support both atoms and non-atoms  - Implement disabled  - Throw exception when non-existent model id is passed in  - Prep for conveyor belt. Add on-select event, handled by caller  - Prevent text selection on double-click  - When esc pressed or backdrop clicked, cancel back to original model Also  - No gaps between nils in h-box and v-box (filter identity children)

--- a/run/css/index.css
+++ b/run/css/index.css
@@ -183,3 +183,13 @@ html, body {
 ::-webkit-scrollbar-thumb:horizontal:active, ::-webkit-scrollbar-thumb:vertical:active {
   background:rgba(0,0,0,.61);
   }
+
+/*
+ bootstrap-chosen additions
+ */
+
+.chosen-container .chosen-results li.mouseover {
+  background-color: #eeeeee;
+  background-image: none;
+  /*color: white;*/
+}
